Refs #57181 fix language chevron right alignment

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -635,6 +635,10 @@ header {
   .dropdown-toggle {
     &::after {
       font-size: 1.5rem;
+
+      @include min-screen($screen-desktop) {
+        margin-right: -0.313rem;
+      }
     }
   }
 
